--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "com.lasm.ualive",
     "displayName": "UAlive",
-    "version": "0.3.0-preview",
+    "version": "1.0.0",
     "unity": "2020.1",
     "description": "UAlive bring C# inheritance, full C# constructs and generation to Bolt. Create classes and structs while live coding, compile down enums and interfaces, and unlock Unitys full potential.",
     "keywords": ["Bolt", "Visual", "Scripting", "Tools"],
